# ENG4033-Grupo-A2

./: .gitignore  pyproject.toml
davi/: requirements.txt
davi/prompts/: melody_prompt.txt
davi/src/: Track.py  abc_to_track.py  corrector.py  llm.py  rhythm.py  track_to_abc.py
ginga/: ARQUITETURA.md
ginga/assets/midi/: sample.mid
ginga/assets/prompts/: rhythm_prompt.txt
ginga/src/: __main__.py  config.py
ginga/src/correction/: abc_to_track.py  corrector.py  llm.py  melody.py  midi_io.py  midi_to_track_list.py  rhythm.py  track_to_abc.py
ginga/src/model/: __init__.py  event.py  track.py
ginga/src/synth/: __init__.py  looper.py  metronomo.py  sintetizador.py  studio.py  teclado.py
ginga/src/ui/: __init__.py  app.py
ginga/src/ui/inputs/: arduino.py
mariam/: telas_projeto.py
pedro/: README.md
pedro/GeneralUser-GS/documentation/: CHANGELOG.html  README.html
pedro/Meta 1/: mario.py  metronomo.py  metronomo_bateria.py  metronomo_guitarra.py  smk.py  teste_incial.py
pedro/Meta 2/: demo_meta2.py  loop_test.py  play_and_record.py  sequencer_test.py
pedro/Sistema_Som/: Event.py  Track.py  __init__.py  __main__.py  demo.py  evento.py  looper.py  teclado.py
src/ginga/: __init__.py
src/ginga/correction/: __init__.py  melody.py
src/ginga/synth/: looper.py  sintetizador.py
src/ginga/ui/inputs/: __init__.py  keyboard.py
